# vallex.cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  activation.cpp  activation.h  common.cpp  common.h  embedding.cpp  embedding.h  transformer.cpp  transformer.h  vallex.cpp  vallex.h
cmake/: ggml.cmake  googletest.cmake
models/: .gitignore  embedding.py  macros.py  main.py  requirements.txt  scaling.py  transformer.py  vallex.py
models/vocos-encodec-24khz/: config.yaml
tests/: CMakeLists.txt  test_embedding.cpp
vallex/: convert.py
